<resources>
    <string name="app_name">Marcika appja</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Postai cím</string>
    <string name="buyer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="product_description">Termék leírás.</string>
    <string name="item_placeholder">leírás</string>
    <string name="item_info_placeholder">infó</string>
    <string name="login_as_guest">Bejelentekezés vendégként</string>
    <string name="balaton">Balaton</string>
    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>
</resources>

